--- a/timer/Cargo.toml
+++ b/timer/Cargo.toml
@@ -3,6 +3,6 @@ name = "timer"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-winapi = "0.3.9"
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["utilapiset"] }
 
