--- a/mutability_play/Cargo.toml
+++ b/mutability_play/Cargo.toml
@@ -1,18 +1,8 @@
 [package]
-name = "what"
+name = "mutability_play"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-name = "what"
-path = "src/main.rs"
-
-[profile.release]
-strip = true
-opt-level = "z"
-lto = true
-panic = "abort"
 
 [dependencies]
