--- a/rustegan/Cargo.toml
+++ b/rustegan/Cargo.toml
@@ -13,3 +13,4 @@ src = "src/lib.rs"
 anyhow = "1.0.71"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
+ulid = "1.0.0"
