--- a/variables/Cargo.toml
+++ b/variables/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-name = "what"
-path = "src/main.rs"
+# [lib]
+# name = "what"
+# path = "src/main.rs"
 
 [profile.release]
 strip = true
 opt-level = "z"
 lto = true
-panic = "abort"
+#panic = "abort"
 
 [dependencies]
