--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ ownership_play/target/**/*
 ownership_play/target/*
 temperature/target/*
 temperature/target/**/*
+leet_coding/target/**/*
+leet_coding/target/*
+rmcmt/target/**/*
+rmcmt/target/*
+rscmt/target/**/*
+rscmt/target/*
+variables/target/**/*
+variables/target/*
