updating new post static data to the right asset folder

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,25 @@ new_post/target/**/*
 new_post/target/*
 open_last/target/**/*
 open_last/target/*
+axum_beginner/target/*
+builder_patterns/target/*
+cursive_test/target/*
+fininte_state_machine/target/*
+pointers/target/*
+ps_tmux/target/*
+rust_by_example/target/*
+serde-whatnow/target/*
+strsplit/target/*
+trash/target/*
+twitter_challenges/target/*
+axum_beginner/target/**/*
+builder_patterns/target/**/*
+cursive_test/target/**/*
+fininte_state_machine/target/**/*
+pointers/target/**/*
+ps_tmux/target/**/*
+rust_by_example/target/**/*
+serde-whatnow/target/**/*
+strsplit/target/**/*
+trash/target/**/*
+twitter_challenges/target/**/*
