Add concurrency project and ignore its target directory
- Add new concurrency Rust project with web scraping and multithreading
- Add concurrency target directories to .gitignore
- Include Cargo.lock and source files for link checking functionality
- Remove trailing whitespace from .gitignore
Add concurrency project and ignore its target directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+concurrency/target/**/*
+concurrency/target/*
 snp/target/**
 timer/target/**
 win-timer/target/**
@@ -55,4 +57,3 @@ builder_patterns/target/**/*
 dag_one/target/**/*
 builder_patterns/target/*
 dag_one/target/*
-
