--- a/keylogger_project/Cargo.toml
+++ b/keylogger_project/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "new_post"
+name = "keylogger_project"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.26"
-ratatui = "0.28"
-crossterm = "0.28"
